# sp_nav

./: .gitignore  README.md
FAST_LIO/: CMakeLists.txt  commit_report.md  package.xml  操作说明.md
FAST_LIO/config/: avia.yaml  mid_360.yaml  mid_360_nav.yaml  mid_70.yaml
FAST_LIO/launch/: auto_start.sh  map_generate.sh  map_save.launch  mapping_360.sh  mapping_mid_360.launch  record.sh  relocalization.sh  relocalization_mid_360.launch  relocalization_nav.launch  relocalization_nav.sh  relocalization_octomap.launch  start.sh  usb2can.sh
FAST_LIO/rviz_cfg/: loam_livox_with_octo.rviz  localization.rviz  localization_cmu.rviz  slam.rviz
FAST_LIO/scripts/: global_localization.py  plot_odometry.py  record_odometry.py  vel_plotter.py  yaw_plotter.py
FAST_LIO/src/: laserMapping.cpp  preprocess.cpp
FAST_LIO/tools/: map_generate.cpp
aerial_navigation/: CMakeLists.txt  README.md  package.xml
aerial_navigation/include/aerial_navigation/: aerial_navigation.h
aerial_navigation/src/: aerial_navigation.cpp
robot_msg/: CMakeLists.txt  package.xml
robot_msg/msg/: MatchMsg.msg  RobotStateMsg.msg
sentry_communicator/src/: can_bus.cpp
sim_referee_system/: CMakeLists.txt  package.xml
sim_referee_system/include/sim_referee_system/: fake_info_publisher.h
sim_referee_system/launch/: sim_referee_system.launch
sim_referee_system/src/: fake_info_publisher.cpp
sp_decision/: CMakeLists.txt  behavior_tree.h  blackboard.hpp  decision_node.cpp  decision_node.h  package.xml
sp_decision/behaviors/: add_blood.hpp  attack.hpp  referee_data_action.hpp  retreat.hpp
sp_decision/executor/: chassis_executor.hpp  log_executor.hpp
sp_decision/launch/: sp_decision.launch
sp_planning/: CMakeLists.txt  package.xml  sp_local_planner_plugin.xml  sp_way_points_publisher.xml
sp_planning/include/: navigation_model.h  sp_local_planner.h
sp_planning/launch/: relocalization_move_base.launch  relocalization_nav_model.launch
sp_planning/param/: base_global_planner.yaml  costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
sp_planning/param/navigation_model/: navigation_model.yaml
sp_planning/param/vel_control/: path_follower.yaml
sp_planning/src/: navigation_model.cpp  sp_local_planner.cpp
